correcting the header size on mobile

--- a/css/newindex.css
+++ b/css/newindex.css
@@ -110,7 +110,7 @@ h3{
 
 /*About*/
 .profile-photo{
-  width: 50%;
+  width: 70%;
 }
 /*Work*/
 
